--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,6 +19,10 @@
             "matches": ["https://*/*"],
             "js": ["caption/custom.js"],
             "css": ["caption/custom.css"]
+        },
+        {
+            "matches": ["https://*/*"],
+            "js": ["caption/caption.js"]
         }
     ]
 }
