--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Caption-ODF",
+    "name": "Caption Catch",
     "version": "1.0.0",
     "manifest_version": 2,
     "description": "Tracking bias in captions",
