--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,13 +16,9 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://*/*"],
+            "matches": ["https://reddit.com/*"],
             "js": ["caption/custom.js"],
             "css": ["caption/custom.css"]
-        },
-        {
-            "matches": ["https://*/*"],
-            "js": ["caption/caption.js"]
         }
     ]
 }
